--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
     <div class="about-content">
         <h2>My Story</h2>
         <p>
-            Hey there! I'm Jon, an Army veteran turned guerilla camping enthusiast living in 
+            Hey there! I'm Jerit, an Army veteran turned guerilla camping enthusiast living in 
             Danville, Virginia. After years of following someone else's rules and living someone 
             else's dream, I decided to take life into my own hands and live it <em>guerilla style</em>.
         </p>
