--- a/templates/gear.html
+++ b/templates/gear.html
@@ -14,7 +14,7 @@
         </p>
         <p class="gear-philosophy">
             <em>"If it can't survive a week in the Virginia woods with zero backup plan, 
-            it doesn't make this list."</em> - Jon
+            it doesn't make this list."</em> - Jerit
         </p>
     </div>
 
