--- a/templates/gear.html
+++ b/templates/gear.html
@@ -18,14 +18,11 @@
         </p>
     </div>
 
-    <div class="gear-grid">
-        <!-- Solar Power -->
-        <div class="gear-item">
-            <div class="gear-img">
-                <img src="{{ url_for('static', filename='images/gear/solar-generator.jpg') }}" 
-                     alt="Portable Solar Generator for Camping" 
-                     loading="lazy">
-            </div>
+<div class="gear-img">
+    <img src="https://m.media-amazon.com/images/I/41XePYWYlAL._AC_US100_.jpg"
+         alt="Portable Solar Generator for Camping"
+         loading="lazy">
+</div>
             <div class="gear-info">
                 <h2>Jackery Explorer 240 Solar Generator</h2>
                 <div class="gear-rating">⭐⭐⭐⭐⭐ (Used for 8+ months)</div>
