--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Jon - Gorilla Camping">
     <title>{% block title %}Gorilla Camping - Guerilla-Style Camping & Off-Grid Living{% endblock %}</title>
     
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="5kmm03xtmziy9c334w4c2227jtyll0" />
+    
     <!-- CookieYes - MUST BE FIRST FOR COMPLIANCE -->
     <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/f9240018d9682ec755f25926/script.js"></script>
     
@@ -237,5 +240,4 @@
     </script>
 </body>
 </html>
-
               
